# database

./: CMakeLists.txt  README.md  errors.c  errors.h  main.c
data/: comparator.c  comparator.h  data.c  data.h
file/: allocator.c  allocator.h  blocks.h  dataBlocks.c  dataBlocks.h  fileApi.c  fileApi.h  iterator.c  iterator.h  tableBlocks.c  tableBlocks.h
include/data/: comparator.h
include/file/: fileApi.h  iterator.h  tableBlocks.h
include/platformic/: cutfile.h
include/query/: query.h
include/util/: testPerfomance.h  tests.h  unitTests.h  util.h
platformic/: cutfile.c
private/data/: comparator.c
private/file/: allocator.c  fileApi.c  iterator.c  tableBlocks.c
private/query/: query.c
private/util/: util.c
public/data/: data.h
public/file/: fileApi.h  iterator.h  tableBlocks.h
public/query/: query.h
public/util/: util.h
query/: query.c  query.h
src/: main.c
src/data/: comparator.c
src/file/: allocator.c  fileApi.c  iterator.c  tableBlocks.c
src/platformic/: cutfile.c
src/query/: query.c
src/util/: testPerfomance.c  tests.c  unitTests.c  util.c
test/: testrw.c  tests.c  tests.h
util/: util.c  util.h
